<resources>
    <string name="app_name" translatable="false">BernardoLab2</string>
    <string name="enter">Enter</string>
    <string name="apartment">Apartment</string>
    <string name="detached_home">Detached Home</string>
    <string name="semi_detached_home">Semi Detached Home</string>
    <string name="condominium">Condominium Apartment</string>
    <string name="town_house">Town House</string>
    <string name="proceed">Proceed to Checkout</string>
    <string name="intro">Please select one of our options at the menu on the right top corner</string>
    <string name="payment_method">Please select a payment option</string>
    <string name="cash">Cash</string>
    <string name="card">Debit/Credit Card</string>
    <string name="cash_selected">Thank you for your purchase</string>
    <string name="card_form_button">Form</string>
    <string name="apartment_option1_address">Fake St 123</string>
    <string name="apartment_option1_price">50,000</string>
    <string name="apartment_option2_address">This Street 420</string>
    <string name="apartment_option2_price">70,000</string>
    <string name="apartment_option3_address">Nameless Avenue 007</string>
    <string name="apartment_option3_price">90,000</string>
    <string name="name_hint">Full Name</string>
    <string name="food_hint">Favorite Food</string>
    <string name="number_hint">XXXX XXXX XXXX XXXX</string>
    <string name="movie_hint">Favorite Movies</string>
    <string name="city_hint">Favorite City</string>
    <string name="submit_card">Submit</string>
    <string name="company_name" translatable="false">LeaseOrRentHome Inc.</string>
    <string name="payment">Your order was successful</string>

    <!--Bernardo Silveira dos Santos Castro, StudentID: 301073235, Section 002-->
</resources>