<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".castroActivityCardForm">

    <EditText
        android:id="@+id/bernardoCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_number"
        android:ems="10"
        android:hint="@string/number_hint"
        android:inputType="" />

    <EditText
        android:id="@+id/bernardoCardName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_name"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/bernardoFavoriteFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_food"
        android:ems="10"
        android:hint="@string/food_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/bernardoFavoriteMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_movie"
        android:ems="10"
        android:hint="@string/movie_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/bernardoFavoriteCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_city"
        android:ems="10"
        android:hint="@string/city_hint"
        android:inputType="textPersonName" />

    <Button
        android:layout_marginTop="@dimen/top_submit_button_card"
        android:id="@+id/bernardoSubmitCardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_card" />
</RelativeLayout>