<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".castroActivityPaymentOptions">

    <TextView
        android:id="@+id/bernardoTextPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method" />

        <RadioGroup
            android:layout_marginTop="@dimen/radio_top_1"
            android:id="@+id/bernardoRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/bernardoCashButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/bernardoCardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card" />
        </RadioGroup>

    <Button
        android:layout_marginTop="@dimen/card_button_top"
        android:visibility="invisible"
        android:id="@+id/bernardoButtonForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_form_button" />


</RelativeLayout>